--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@gustavoherreroc/template-react-component-lib",
-  "version": "0.0.10",
+  "version": "0.0.12",
   "description": "A react component library",
   "scripts": {
-    "rollup": "rollup -c",
+    "rollup": "rollup -c --bundleConfigAsCjs",
     "co:login": "aws codeartifact login --tool npm --repository teamRepository --domain company --profile personalAccount",
     "test": "vitest",
     "coverage": "vitest run --coverage",
@@ -21,8 +21,8 @@
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
     "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-webpack4": "^6.5.16",
-    "@storybook/manager-webpack4": "^6.5.16",
+    "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
     "@testing-library/jest-dom": "^5.16.5",
@@ -36,7 +36,8 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
     "tslib": "^2.5.0",
-    "typescript": "^4.7.4",
+    "typescript": "4.7",
+    "vite": "^4.1.4",
     "vitest": "^0.28.5"
   },
   "main": "dist/cjs/index.js",
